c4prj2_input/grade.txt
Grading at Sat Aug  3 06:45:35 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:27:53: error: operation on ‘i’ may be undefined [-Werror=sequence-point]
           card_t c = card_from_letters(str[i], str[i++]);
                                                     ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
